# furniflow-ai-api

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml
src/: settings.py
src/api/: server.py
src/api/classificator/: controller.py
src/api/classificator/models/: output.py
src/api/common/: custom_router.py
src/api/health/: controller.py
src/application/classificator/: dependencies.py  service.py
src/application/classificator/services/: trained_model_service.py  translator_service.py
